// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables the label 1`] = `
<label
  htmlFor={undefined}
  style={
    Object {
      "cursor": "inherit",
    }
  }
/>
`;

exports[`displays a form label to the user 1`] = `
<label
  htmlFor={undefined}
  style={undefined}
/>
`;

exports[`displays a label name to the user 1`] = `
<label
  htmlFor={undefined}
  style={undefined}
>
  label
</label>
`;

exports[`passes the label for to the component 1`] = `
<label
  htmlFor="goGoGadget"
  style={undefined}
/>
`;

exports[`spreads styles if disabled is true 1`] = `
<label
  htmlFor={undefined}
  style={
    Object {
      "color": "green",
      "cursor": "inherit",
    }
  }
/>
`;
